# helper

server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
server/src/: Makefile  server.py  settings.py  vk_sender.py
