[tool.poetry]
name = "helper"
version = "0.1.0"
description = ""
authors = ["Kovalev Vasiliy <minskij10@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
vk_api = "^11.9.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
